--- a/app/assets/stylesheets/observations/search_prototype.css
+++ b/app/assets/stylesheets/observations/search_prototype.css
@@ -180,3 +180,5 @@
 .obs-attr.media {margin-top: 0;}
 .obs-attr.media .media-left .fa { width: 12px; color: #aaa;}
 .obs-attr.media .media-left { padding-right: 5px; text-align: center;}
+
+inat-taxon { white-space: nowrap; }
